[package]
name = "pmbk"
version = "0.1.0"
edition = "2021"
description = "Paper Mario (N64) soundbank tool"

[dependencies]
binrw = "0.13.3"
clap = { version = "4.4.12", features = ["derive"] }
rodio = { version = "0.17.3", optional = true }
wav = { version = "1.0.0", optional = true }

[features]
default = ["rodio", "wav"]
